# report-generator

./: .dockerignore  .env.example  .gitignore  ALIGNMENT_REVIEW.md  ARCHITECTURE-ANALYSIS-STUCK-JOBS.md  ARCHITECTURE-DECISIONS.md  ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  BRD - Report Generator.md  CLAIM-NEXT-JOB-FIX.md  CLONE_API_DOCUMENTATION.md  CLOUD-SCHEDULER-SETUP.md  CLOUD-SOURCES-FIX.md  CLOUD-TASKS-MIGRATION.md  COST-OPTIMIZATION.md  CRITICAL-FIXES-SUMMARY.md  DASHBOARD-EXPORT-SIMPLIFICATION.md  DEEP-ROOT-CAUSE-ANALYSIS.md  DEPLOYMENT-ENV-VARIABLES.md  DEPLOYMENT-FIXES-APPLIED.md  DEPLOYMENT-QUICK-START.md  DEPLOYMENT-READINESS.md  DEPLOYMENT-SANITY-CHECK.md  DEPLOYMENT.md  DOCX-REMOVAL-COMPLETE.md  DOCX-REMOVAL.md  DOWNLOAD-FIX-PRODUCTION.md  Dockerfile  ENABLE-HTTP-TRIGGER.md  ENV-VARS-REQUIRED-VS-OPTIONAL.md  ENVIRONMENT-VARIABLES.md  EXPORT-ARCHITECTURAL-FIX.md  EXPORT-DOWNLOAD-FIX.md  EXPORT-FEATURE-REVIEW.md  EXPORT-ISSUES-FIX.md  EXPORT-ROOT-CAUSE-ANALYSIS.md  EXPORT-SIMPLIFICATION-FINAL.md  EXPORT-UI-COMPARISON.md  EXPORT-UNIFICATION-COMPLETE.md  (+73 more)
app/: __init__.py  globals.css  layout.tsx  page.tsx
data/: db.json  promptSets.json  writing-styles.json
docs/: openapi.yaml  prompt-pack.md
prisma/: schema.prisma  seed.ts
public/: app.js  index.html  styles.css  template-studio.css
report_generator/: __init__.py  adapters.py  pipeline.py  profiles.py  prompts.py
scripts/: CLEANUP-SCRIPTS-EXPLAINED.md  INDEX-APPLICATION-GUIDE.md  INDEX-TROUBLESHOOTING.md  add-critical-indexes.sql  add-exports-storage-columns.sql  (+124 more)
(+239 files in other folders)
