[project]
name = "report-generator"
version = "0.1.0"
description = "Evidence-aware report scoring utilities"
readme = "BRD - Report Generator.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
dependencies = [
    "boto3>=1.34.0",
    "docxtpl>=0.16.7",
    "markdown>=3.6",
    "xhtml2pdf>=0.2.15",
    "PyPDF2>=3.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "moto[server]>=5.0.0",
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

