[project]
name = "report-generator"
version = "0.1.0"
description = "Evidence-aware report scoring utilities"
readme = "BRD - Report Generator.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "markdown>=3.6",
    "python-docx>=1.1.2",
    "reportlab>=4.0.4",
]

[project.optional-dependencies]
dev = ["moto[server]>=5.0.0", "pytest>=8.2.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
